# sat_scaffolding

./: CMakeLists.txt  README.md
include/: templates.h
src/: application_header_template.c  application_source_template.c  cmake_template.c  docker_compose_template.c  dockerfile_template.c  gitignore_template.c  main.c  main_template.c
templates/: CMakeLists.txt.in  Dockerfile.in  application.c.in  application.h.in  docker-compose.yaml.in  main.c.in
